--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="image1">
-            <img src="./image-equilibrium.jpg" alt="equilibrium">
+            <img src="./asset/image-equilibrium.jpg" alt="equilibrium">
             <div class="text"><br>
                 <h3>Equilibrium #3429</h3><br>
                 <p>Our Equilibrium collection promotes balance and calm.</p><br>
@@ -19,7 +19,7 @@
             </div>
             <hr><br>
             <div class="image2">
-                <img src="./image-avatar.png">
+                <img src="./asset/image-avatar.png">
                 <span class="text1">&nbsp;&nbsp; Creation of <span class="text">Chibuzo Jacobs</span> </span>
             </div>  
         </div>
